# PROJECT_localbrain

./: --analyze-only_19Fri10Oct2025.html  --help_02Tue14Oct2025.html  --help_analysis_report.html  .env.bak  .env.example  .eslintrc.json  .gitignore  01_CODEBASES_19Fri10Oct2025.html  A3A.yml  ADD_YOUR_KEYS_HERE.txt  AGENT_C_STATUS_ANALYSIS.md  API_KEYS_SETUP.md  BATCH_APPROVAL_SYSTEM.md  CENTRALIZED_ARCHITECTURE_ORCHESTRATOR.py  CENTRALIZED_COMPONENT_REGISTRY.py  CENTRALIZED_OKLCH_COLOR_MANAGER.py  CHANGES.md  CLAUDE.md  CLAUDE_AGENT_INSTRUCTIONS.md  CODE_MINING_REPORT.json  COMPLETE_ECOSYSTEM_MAPPING_ANALYSIS.md  COMPLETE_GITHUB_CONSOLIDATION_STRATEGY.md  COMPLETE_PATCHWORK_EXTRACTION.py  COMPONENT_CATEGORIES.json  COMPREHENSIVE_COMPONENT_REGISTRY.json  CONSOLIDATION_COMPLETE.md  DOCSTRING_ADDITION_PLAN.md  DOCSTRING_STYLE_GUIDE.md  EXTRACTED_--help_analysis_report.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_LocalBrain_16Fri10Oct2025.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_LocalBrain_analysis_report.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_PRODUCT_analysis_report.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_calendar_file_explorer_demo.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_maximum_extraction_report.html_BROWSER_18Thu10Oct2025.html  EXTRACTED_test-data_16Fri10Oct2025.html_BROWSER_18Thu10Oct2025.html  FINAL_REPO_POLISH_COMPLETE.md  FINAL_complete_all_docstrings.py  GOLDEN_STANDARD_COMPLETE_HTML.html  HTML_ARCHITECTURE_COMPLETE_MAP.md  IMPLEMENTATION_STATUS.md  (+106 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/src/: agents.rs  auth.rs  (+19 more)
(+1036 files in other folders)
