[package]
name = "localbrain"
version = "1.0.0"
edition = "2021"
authors = ["LocalBrain Team"]
license = "Apache-2.0 OR MIT"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
base64 = "0.22"
# ring = "0.17"
# hex = "0.4"
# async-trait = "0.1"
# once_cell = "1.19"
# parking_lot = "0.12"
# dashmap = "6.0"
# futures = "0.3"
# bytes = "1.7"
# tempfile = "3.10"
# which = "6.0"
git2 = "0.18"
# notify = "6.1"
# crossbeam-channel = "0.5"
# sysinfo = "0.31"
# dirs = "5.0"
# whoami = "1.4"
# libc = "0.2"
portable-pty = "0.8"
tempfile = "3.10"
which = "6.0"
wasmtime = "23.0"
# wasmtime-wasi = "23.0"  # Temporarily disabled due to API issues
libloading = "0.8"
async-trait = "0.1"
walkdir = "2.5"
dotenv = "0.15"
# hound = "3.5"
# openidconnect = "3.5"
# oauth2 = "4.4"

[features]
default = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
